5.4/ru/4-methodology.rst
Выбор методологии разработки
======================================================

Учить — значит повторять что-то одно и то же снова и снова. Я не буду применять такой подход, обещаю. В конце каждого шага исполните победный танец и сохраните результат проделанной работы. Это подобно нажатию ``Ctrl+S``, только для всего сайта целиком.

Стратегия использования Git
-------------------------------------------------

.. index::
    single: Git;add
    single: Git;commit

В конце каждого шага не забудьте зафиксировать изменения в git:

.. code-block:: terminal
    :class: ignore

    $ git add .
    $ git commit -m'Add some new feature'

Вы можете смело добавлять в коммит все файлы, потому что при создании Symfony-проекта уже был подготовлен файл ``.gitignore``. Кроме того, каждый пакет может добавлять свои собственные шаблоны игнорируемых файлов в ``.gitignore``. Взгляните на текущее содержимое:

.. code-block:: text
    :caption: .gitignore
    :class: ignore
    :emphasize-lines: 1,9

    ###> symfony/framework-bundle ###
    /.env.local
    /.env.local.php
    /.env.*.local
    /config/secrets/prod/prod.decrypt.private.php
    /public/bundles/
    /var/
    /vendor/
    ###< symfony/framework-bundle ###

Эти странные строки — маркеры, добавленные Symfony Flex, чтобы определить, что нужно удалить, если вы решите удалить зависимость. Как я упоминал ранее, вся эта утомительная работа выполняется автоматически Symfony.

Теперь самое время разместить репозиторий на удалённый сервер. Для этого прекрасно подойдёт GitHub, GitLab или Bitbucket.

.. note::

    Если вы развёртываете проект на Platform.sh, у вас уже есть копия Git-репозитория, поскольку при развёртывании через ``cloud:deploy`` Platform.sh использует Git. Но вам не стоит полагаться на Git-репозиторий, используемый Platform.sh. Он не является резервной копией и предназначен только для развёртывания.

Развёртывание в продакшене с помощью непрерывной интеграции
----------------------------------------------------------------------------------------------------------------

.. index::
    single: Symfony CLI;cloud:deploy

Ещё одной хорошей практикой является частое развёртывание. Развёртывание в конце каждого шага — хорошо и полезно:

.. code-block:: terminal
    :class: ignore

    $ symfony cloud:deploy
